# ylepuoluekannatus

./: .gitignore  .gitmodules  README.md  app.yaml  graph_footer.html  index.html  main.html  main.py  model.py  new.html  new.py  pk.yaml  preview.html  run_dev_server
createdb/: LICENSE  README.md  createdb.cabal
createdb/app/: Main.hs
e/: app.yaml  e.py  graph.html  graph_footer.html  index.html  main.html  main.py  model.py  new.html  new.py  pk.yaml  preview.html  preview.py  run_dev_server
e/css/: index.css
e/scraper/: paragraph.py  pkscraper.py  table.py
scraper/: paragraph.py  pk.csv  pk.html  pk.yaml  pkscraper.py  table.py
static/: c3
static/css/: index.css
static/js/: dragbox.js  index.js  line.js  scatter.js
templates/: index.html
