name:                createdb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pparkkin/createdb#readme
license:             BSD3
license-file:        LICENSE
author:              Paavo Parkkinen
maintainer:          pparkkin@gmail.com
copyright:           2017 Paavo Parkkinen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable createdb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , createdb
  default-language:    Haskell2010

test-suite createdb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , createdb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pparkkin/createdb
